k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-showcase
  labels:
    name: devops-showcase
    environment: production
